--- a/app-name/src/App.css
+++ b/app-name/src/App.css
@@ -1,5 +1,6 @@
+/*
 .App {
-  text-align: center;
+  !*text-align: center;*!
 }
 
 .App-logo {
@@ -15,14 +16,14 @@
 
 .App-header {
   min-height: 100vh;
-  /*background-color: #282c34;*/
-  /*min-height: 100vh;*/
-  /*display: flex;*/
-  /*flex-direction: column;*/
-  /*align-items: center;*/
-  /*justify-content: center;*/
-  /*font-size: calc(10px + 2vmin);*/
-  /*color: white;*/
+  !*background-color: #282c34;*!
+  !*min-height: 100vh;*!
+  !*display: flex;*!
+  !*flex-direction: column;*!
+  !*align-items: center;*!
+  !*justify-content: center;*!
+  !*font-size: calc(10px + 2vmin);*!
+  !*color: white;*!
 }
 
 .App-link {
@@ -37,3 +38,4 @@
     transform: rotate(360deg);
   }
 }
+*/
